# linked-list-visualizer

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/controller/: ListController.cpp  ListController.h
src/core/: DoubleLinkedList.cpp  DoubleLinkedList.h  LinkedList.h  SingleLinkedList.cpp  SingleLinkedList.h
src/ui/: InputHandler.cpp  InputHandler.h  MenuManager.cpp  MenuManager.h  widget.cpp  widget.h  widget.ui
